--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -75,51 +75,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reflect an existing database into a new model\n",
-    "\n",
-    "# reflect the tables\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['measurement', 'station']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Columns in the table:\n",
+      "id - INTEGER\n",
+      "station - TEXT\n",
+      "date - TEXT\n",
+      "prcp - FLOAT\n",
+      "tobs - FLOAT\n"
+     ]
     }
    ],
    "source": [
-    "# View all of the classes that automap found\n"
+    "# Inspect the columns of the first table \n",
+    "columns = inspector.get_columns(tables[0])\n",
+    "print(\"\\nColumns in the table:\")\n",
+    "for col in columns:\n",
+    "    print(f\"{col['name']} - {col['type']}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Columns in the table:\n",
+      "id - INTEGER\n",
+      "station - TEXT\n",
+      "name - TEXT\n",
+      "latitude - FLOAT\n",
+      "longitude - FLOAT\n",
+      "elevation - FLOAT\n"
+     ]
+    }
+   ],
    "source": [
-    "# Save references to each table\n"
+    "# Inspect the columns of the second table \n",
+    "columns = inspector.get_columns(tables[1])\n",
+    "print(\"\\nColumns in the table:\")\n",
+    "for col in columns:\n",
+    "    print(f\"{col['name']} - {col['type']}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rn/h0jsj52532jgpm4cc66mm4rm0000gn/T/ipykernel_287/3537866735.py:5: SADeprecationWarning: The AutomapBase.prepare.reflect parameter is deprecated and will be removed in a future release.  Reflection is enabled when AutomapBase.prepare.autoload_with is passed.\n",
+      "  Base.prepare(engine, reflect=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reflect an existing database into a new model\n",
+    "Base = automap_base()\n",
+    "\n",
+    "# Reflect the tables\n",
+    "Base.prepare(engine, reflect=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Reflect the database using autoload_with instead of reflect to avoid the above warrning messages \n",
+    "Base = automap_base()\n",
+    "Base.prepare(autoload_with=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['station', 'measurement']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# View all of the classes that automap found\n",
+    "print(Base.classes.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save references to each table\n",
+    "Measurement = Base.classes.measurement\n",
+    "Station = Base.classes.station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
    ]
   },
   {
